crates/datarig-tui/tests/snapshots/ui_snapshots__unbound_banner_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×  2 console 2 no connection ×           "
"│  ＋ New connection   │╭ Query · console 2 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▸ ⠋   local-pg        ││ ! No connection · Space c s picks one for this tab   │"
"│▸ ○   分析-replica    ││  1▎select 'kept';                                    │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  │ Deleted v6; 1 tab closed             │ Ctrl+E run · Tab next pane EN "
