crates/datarig-tui/tests/snapshots/ui_snapshots__welcome_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮╭ Welcome ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  ＋ New connection                   ││                                                                                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│                                      ││  datarig                                                                                                             │"
"│ No connection profiles yet           ││  Dive into any database — right from your terminal.                                                                  │"
"│ Press n to create one, or paste a    ││                                                                                                                      │"
"│ postgres:// or mysql:// URL          ││  No connection profiles yet.                                                                                         │"
"│                                      ││                                                                                                                      │"
"│                                      ││  n   New connection                                                                                                  │"
"│                                      ││  F1  Keyboard help                                                                                                   │"
"│                                      ││  :   Commands                                                                                                        │"
"│                                      ││  q   Quit                                                                                                            │"
"│                                      ││  Paste a connection URL (postgres://, mysql://)                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                   │ Enter open · Tab next pane · : commands · F1 help · q quit · Space more EN "
