crates/datarig-tui/tests/snapshots/ui_snapshots__welcome_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮╭ Welcome ─────────────────────────────────────────────╮"
"│  ＋ New connection   ││                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│                      ││  datarig                                             │"
"│ No connection        ││  Dive into any database — right from your terminal.  │"
"│ profiles yet         ││                                                      │"
"│ Press n to create    ││  No connection profiles yet.                         │"
"│ one, or paste a      ││                                                      │"
"│ postgres:// URL      ││  n   New connection                                  │"
"│                      ││  F1  Keyboard help                                   │"
"│                      ││  :   Commands                                        │"
"│                      ││  q   Quit                                            │"
"│                      ││  Paste a postgres:// URL to fill in the form         │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"   │ Enter open · Tab next pane · : commands · F1 help · q quit · Space more EN "
