crates/datarig-tui/tests/snapshots/ui_snapshots__welcome_form_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮╭ Welcome ─────────────────────────────────────────────╮"
"│  ＋ New connection   ││                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│ ╭ New connection ──────────────────────────────────────────────────────────╮ │"
"│ │  Basic   SSH   Advanced                            Ctrl+N/Ctrl+P section │ │"
"│ │                                                                          │ │"
"│ │ Driver            ‹PostgreSQL› MySQL  Redis  Elasticsearch   unsupported │ │"
"│ │ Name                                                                     │ │"
"│ │ Host              localhost                                              │ │"
"│ │ Port              5432                                                   │ │"
"│ │ User                                                                     │ │"
"│ │ Password storage  ‹Keychain› File  Command  Env  Prompt   ←/→ change     │ │"
"│ │ Password                                    kept in the OS keychain      │ │"
"│ │ Database                                                                 │ │"
"│ │                                                                          │ │"
"│ │ DSN               postgres://localhost:5432/?sslmode=prefer              │ │"
"│ │                                                                          │ │"
"│ │                                                                          │ │"
"│ │                    Test    Save    Cancel                                │ │"
"│ │                                                                          │ │"
"│ │                                                                          │ │"
"│ ╰─ Tab/↑↓ move · Ctrl+N/P section · Ctrl+T test · Ctrl+S save · Esc cancel ╯ │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"                                                                             EN "
