crates/datarig-tui/tests/snapshots/ui_snapshots__which_key_results_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×                                        "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ analytics       ││  2▎SELECT * FROM shop.users WHERE id <= 8;           │"
"│    ▸ public          ││  3                                                   │"
"│    ▸ shop            ││  4 SELECT u.name, o.status, o.total_amount           │"
"│                      ││  5 FROM shop.orders o                                │"
"│                      ││  6 JOIN shop.users u ON u.id = o.user_id             │"
"│                      ││  7 WHERE o.status = 'paid';                          │"
"╭ Space r — Results ───────────────────────────────────────────────────────────╮"
"│ #  Results → count every row (runs a count query)                            │"
"│ +  Results pane → taller                                                     │"
"│ -  Results pane → shorter                                                    │"
"│ I  Result detail → Cell / Row                                                │"
"│ [  Result tabs → previous                                                    │"
"│ ]  Result tabs → next                                                        │"
"│ a  +Copy all fetched rows                                                    │"
"│ h  Results pane → hide / show                                                │"
"│ i  Result detail → show / hide                                               │"
"│ n  Results → next page                                                       │"
"│ …                                                                            │"
"╰───────────────────────────────────── Esc close · Backspace back · : commands ╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
